amaroK Changelog
==================
(c) 2002, 2003 by Mark Kretschmann and the amaroK team. GPL License.

POST 0.7.0
  * add: configurable delay after each track.  currently 0-10 seconds in 1 sec increments
         but could easily be made to use finder increments if ppl want - piggz (www.piggz.co.uk)
  * add: viswidgetv2.  it seems a lot smoother on my machine.  
         its quite easy to tweak the dynamics is needed.  is accessible the same as the other
         widgets, just click until it appears (though it looks the same as the original widget
         it just acts differently) - piggz (www.piggz.co.uk)

VERSION 0.7.0:
  * fix: collection of fixes related to showing/raising/hiding the playlist
    when showing/raising/hiding the mainWidget
  * fix: by muesli: make playlist searches a bit faster at the expense of memory
  * fix: (partial fix) bitrate/samplerate font overlap at large font sizes
  * change: less staccato loading of widgets
  * change: pause makes the analyser bars fall to zero rather than just vanish
  * add: xfade when starting tracks by doubleclick
  * fix: global shortcuts can now be changed
  * fix: tracks skipping randomly
  * change: "BrowserWin Enabled" on by default
  * change: "Save Playlist" on by default
  * change: "Show Metainfo" on by default 
  * fix: make loading playlist not block UI
  * fix: on startup load playlist after UI is shown
  * change: "Software Mixer Only" on by default
  * fix: make timedisplay also work for streams
  * fix: volume slider adjusting
  * fix: when dropping tracks to PL, order will stay the same as in FileBrowser
  * add: FileBrowser sortable by clicking on header
  * add: analyzer that distorts a bitmap
  * add: multiple analyzers now possible
  * add: "Software Mixer Only" option
  * Removed stale sigplay()
  * Cleaned a couple "deprecated" warnings
  * add: undo and redo playlist actions
  * fix: rewritten config dialog and moved into separate file
  * add: started configurable colors